--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+ul {
+  /* padding: 0; */
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul li {
+  list-style-type: none;
+  margin: 30px;
+  /* padding-bottom: 20px; */
+  border-radius: 20px;
+  display: flex;               /* establish flex container */
+  align-items: center;         /* vertically center flex items */
+  height: 120px;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: #e2fff5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  padding: 3%;
+}
+
+h2 {
+  width: 0%;
+  /* float: left; */
+  display: inline-block;
+  margin: 0;
+  padding-left: 3%
+}
+
+h3 {
+  /* width:50%; */
+  float: right;
+  display: inline;
+  margin: 0;
+}
+
+.square {  
+  border: 3px solid white;
+  border-radius: 100%;
+  width: 90px;
+  height: 90px;
+  float: right;
   display: flex;
-  flex-direction: column;
+  margin-right: 10px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.big-text {
+  text-align: center;
+  font-size: x-large;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown {
+  position: relative;
+  margin-left: 40%
+}
+
+.menu {
+  position: absolute;
+
+  list-style-type: none;
+  margin: 5px 0;
+  padding: 0;
+
+  border: 1px solid grey;
+  background: #fff;
+  width: 150px;
+}
+
+.menu > li {
+  margin: 0;
+
+  background-color: white;
+}
+
+.menu > li:hover {
+  background-color: lightgray;
+}
+
+.menu > li > button {
+  width: 100%;
+  height: 100%;
+  text-align: left;
+
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 5px;
+  margin: 0;
+  font: inherit;
+  cursor: pointer;
 }
