--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
-ul {
+.restaurantList {
   /* padding: 0; */
   padding-right: 10px;
   padding-left: 10px;
 }
 
-ul li {
+.restaurant {
   list-style-type: none;
   margin: 30px;
   /* padding-bottom: 20px; */
   border-radius: 20px;
   display: flex;               /* establish flex container */
   align-items: center;         /* vertically center flex items */
-  height: 120px;
+  min-height: 120px;
   justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 body {
@@ -20,11 +22,12 @@ body {
 }
 
 h1 {
-  padding: 3%;
+  padding: 40px;
 }
 
 h2 {
-  width: 0%;
+  /* width: 0%; */
+  width: calc(100% - 110px);
   /* float: left; */
   display: inline-block;
   margin: 0;
@@ -39,15 +42,100 @@ h3 {
 }
 
 .square {  
-  border: 3px solid white;
+  border: 5px solid white;
   border-radius: 100%;
   width: 90px;
   height: 90px;
   float: right;
   display: flex;
-  margin-right: 10px;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
+}
+
+.pie {
+  position: relative;
+  margin-right: 10px;
+}
+
+@property --p1 {
+  syntax: '<number>';
+  inherits: true;
+  initial-value: 1;
+}
+
+.pie1 {
+  --p1:20;
+  --b1:5px;
+  --c1:rgb(177, 177, 177);
+}
+
+.pie1:before,
+.pie1:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.pie1:before {
+  inset: 0;
+  background:
+    radial-gradient(farthest-side,var(--c1) 98%,#0000) top/var(--b1) var(--b1) no-repeat,
+    conic-gradient(var(--c1) calc(var(--p1)*1%),#0000 0);
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(99% - var(--b1)),#000 calc(100% - var(--b1)));
+          mask: radial-gradient(farthest-side,#0000 calc(99% - var(--b1)),#000 calc(100% - var(--b1)));
+}
+
+.animate1 {
+  animation: p1 0.75s 0s both;
+}
+
+@keyframes p1 {
+  from{--p1:0}
+}
+
+@property --p2 {
+  syntax: '<number>';
+  inherits: true;
+  initial-value: 1;
+}
+
+.pie2 {
+  --p2:20;
+  --b2:5px;
+  --c2:rgb(177, 177, 177);
+}
+
+.pie2:before,
+.pie2:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+}
+
+.pie2:before {
+  inset: 0;
+  background:
+    radial-gradient(farthest-side,var(--c2) 98%,#0000) top/var(--b2) var(--b2) no-repeat,
+    conic-gradient(var(--c2) calc(var(--p2)*1%),#0000 0);
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(99% - var(--b2)),#000 calc(100% - var(--b2)));
+          mask: radial-gradient(farthest-side,#0000 calc(99% - var(--b2)),#000 calc(100% - var(--b2)));
+}
+
+.no-round:before {
+  background-size: 0 0, auto;
+}
+
+.no-round:after {
+  content: none;
+}
+
+.animate2 {
+  animation: p2 0.75s 0s both;
+}
+
+@keyframes p2 {
+  from{--p2:0}
 }
 
 .big-text {
@@ -61,13 +149,17 @@ h3 {
   margin-left: 40%
 }
 
+.foodmenu-li {
+  font-weight: 450;
+  list-style-type: disclosure-closed;
+  margin-left: 15px;
+}
+
 .menu {
   position: absolute;
-
   list-style-type: none;
   margin: 5px 0;
   padding: 0;
-
   border: 1px solid grey;
   background: #fff;
   width: 150px;
@@ -75,7 +167,6 @@ h3 {
 
 .menu > li {
   margin: 0;
-
   background-color: white;
 }
 
@@ -87,7 +178,6 @@ h3 {
   width: 100%;
   height: 100%;
   text-align: left;
-
   background: none;
   color: inherit;
   border: none;
